<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp" >

    <TextView
        android:id="@+id/download2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/nome_tela"
        android:textColor="@color/colorSendText" />

    <TextView
        android:id="@+id/textNomeArquivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:text="@string/down_nome_arquivo"
        android:textColor="@color/colorSendText" />

    <EditText
        android:id="@+id/down_Nome_Arquivo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:hint="Nome do Arquivo"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Download"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:background="@drawable/backgroud_button"
        android:text="@string/down_btn2"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFechar3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/backgroud_button"
        android:text="Fechar"
        android:textSize="18sp"
        android:textColor="@color/whiteColor" />

    <TextView
        android:id="@+id/receive_text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="180dp"
        android:scrollbars="vertical"
        android:visibility="invisible"
        android:layout_centerHorizontal="true" />


</LinearLayout>